--- a/workbench-ui.glade
+++ b/workbench-ui.glade
@@ -207,7 +207,7 @@
                 <property name="margin_left">4</property>
                 <property name="margin_right">4</property>
                 <property name="margin_top">3</property>
-                <property name="label" translatable="yes">Frame Rate</property>
+                <property name="label" translatable="yes">Analysis Rate</property>
               </object>
               <packing>
                 <property name="left_attach">4</property>
@@ -215,7 +215,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="framerate">
+              <object class="GtkEntry" id="analysisrate">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="margin_right">10</property>
